--- a/dynakube.yaml
+++ b/dynakube.yaml
@@ -95,6 +95,7 @@ spec:
     # Cannot be used in conjunction with cloud-native fullstack monitoring, classic fullstack monitoring or host monitoring
     #
     applicationMonitoring:
+    #classicFullStack:
       # The namespaces which should be injected into
       # If unset, all namespace will be injected into
       # namespaceSelector has no effect on hostMonitoring or classicFullstack
@@ -210,6 +211,10 @@ spec:
     #     [connectivity]
     #     networkZone=
     #   valueFrom: myCustomPropertiesConfigMap
+    customProperties:
+       value: |
+         [debugging]
+         debugging_enabled=true    
 
     # Optional: Specifies the name of a secret containing a TLS certificate, a TLS key and the TLS key's password to be used by ActiveGate instances
     # If unset, a self-signed certificate is used
