Fix DynaKube compatibility for Operator v1.7.1
- Update API version from v1beta2 to v1beta5
- Remove useCSIDriver field (deprecated in v1beta5)
- Add DT_ENDPOINT configuration note in README

--- a/dynakube.yaml
+++ b/dynakube.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: dynatrace
 type: Opaque
 ---
-apiVersion: dynatrace.com/v1beta2
+apiVersion: dynatrace.com/v1beta5
 kind: DynaKube
 metadata:
   name: kind-k8s
@@ -121,7 +121,7 @@ spec:
       # Optional: If you want to use CSIDriver; disable if your cluster does not have 'nodes' to fall back to the volume approach.
       # Defaults to false
       #
-      useCSIDriver: true
+      # useCSIDriver: true  # Removed for v1beta5 compatibility
 
       # Optional: The URI of the image that contains the codemodules specific OneAgent that will be injected into pods and applications.
       # For an example of a Dockerfile creating such an image, see https://dt-url.net/operator-docker-samples
